--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Eiva Orce – Data Scientist</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+
 <header>
   <h1>Eiva Orce</h1>
   <p class="tagline">Data Scientist</p>
@@ -22,7 +22,7 @@
 <section class="center">
   <h2>Welcome</h2>
   <p>
-    I’m Eiva — a data scientist who enjoys turning complex information into clarity.  
+    Hi, I’m Eiva — a data scientist who transforms complex information into clarity.  
     I build models, explore data, and create insights that help people take smarter decisions.
   </p>
 </section>
