--- a/index.html
+++ b/index.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samuel Lewis - Software Engineer</title>
-    <link rel="stylesheet" href="style.css">
-    </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About – Eiva Orce</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
+<header>
+  <h1>About Me</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-    <header class="hero">
-        <h1 class="name">Samuel Lewis</h1>
-        <p class="title">Software Engineer and Engineering Manager</p>
-    </header>
+<section>
+  <p>
+    I’m Eiva Orce — a data scientist who loves uncovering data patterns and telling stories with data.
+    I focus on building solutions that make data accessible to everyone.
+  </p>
 
-    <main class="card-container">
-        
-        <div class="card about-card">
-            <a href="#about" class="card-link">
-                <h2 class="card-title">About</h2>
-                <div class="icon-grid">
-                    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" fill="none">
-                        <line x1="10" y1="50" x2="90" y2="50" stroke="#ccc" stroke-width="4"/>
-                        <line x1="50" y1="10" x2="50" y2="90" stroke="#ccc" stroke-width="4"/>
-                        <line x1="30" y1="10" x2="30" y2="90" stroke="#ccc" stroke-width="4"/>
-                        <line x1="70" y1="10" x2="70" y2="90" stroke="#ccc" stroke-width="4"/>
-                        <line x1="10" y1="30" x2="90" y2="30" stroke="#ccc" stroke-width="4"/>
-                        <line x1="10" y1="70" x2="90" y2="70" stroke="#ccc" stroke-width="4"/>
-                    </svg>
-                </div>
-            </a>
-        </div>
+  <p>
+    Whether it's exploratory analysis or predictive modeling, I care about clarity, curiosity,
+    and thoughtful design in the work I create.
+  </p>
+</section>
 
-        <div class="card projects-card">
-            <a href="#projects" class="card-link">
-                <h2 class="card-title">Projects</h2>
-                <div class="icon-shape">
-                    <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" fill="#ccc">
-                        <rect x="0" y="0" width="100" height="100" fill="#333" rx="10"/>
-                        <path d="M 20 20 L 80 40 L 40 80 Z" fill="#ccc"/>
-                        <ellipse cx="50" cy="50" rx="30" ry="15" transform="rotate(-30 50 50)" fill="#ccc" />
-                    </svg>
-                </div>
-            </a>
-        </div>
+<footer>© 2025 Eiva Orce</footer>
+</body>
+</html>
