--- a/about.html
+++ b/about.html
@@ -22,18 +22,9 @@
 
     <main class="card-container">
         
-        <a href="about.html" class="card about-card">
-            <h2 class="card-title">About</h2>
-            <div class="icon-grid">
-                <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" fill="none">
-                    <line x1="10" y1="50" x2="90" y2="50" stroke="#444" stroke-width="4"/>
-                    <line x1="50" y1="10" x2="50" y2="90" stroke="#444" stroke-width="4"/>
-                    <line x1="30" y1="10" x2="30" y2="90" stroke="#444" stroke-width="4"/>
-                    <line x1="70" y1="10" x2="70" y2="90" stroke="#444" stroke-width="4"/>
-                    <line x1="10" y1="30" x2="90" y2="30" stroke="#444" stroke-width="4"/>
-                    <line x1="10" y1="70" x2="90" y2="70" stroke="#444" stroke-width="4"/>
-                </svg>
-            </div>
+        <a href="index.html" class="card index-card">
+            <h2 class="card-title">home</h2>
+            <div class="icon-grid">🏠</div>
         </a>
 
         <a href="projects.html" class="card projects-card">
