--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <section class="center">
   <h2>Welcome</h2>
   <p>
-    Hi, I’m Eiva — a data scientist who transforms complex information into clarity.  
-    I build models, explore data, and create insights that help people take smarter decisions.
+    Hi, I’m Eiva, Senior Data Scientist who transforms complex information into clarity.  
+    I build models, explore data, and create insights that help teams make smarter decisions.
   </p>
 </section>
 <footer>© 2025 Eiva Orce</footer>
