--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <section id="contact" class="contact-wrapper">
     <h2 class="section-title">Contact Me</h2>
     <p class="contact-intro">
-      Hi there! Whether you’re interested in coaching, exploring future projects, or just want to have a conversation, you’ve come to the right place. I’ll do my best to get back to you quickly. If you have feedback, I’d especially love to hear from you—this is the best way to reach me.
+      Hello! Whether you're looking for coaching, want to collaborate on a future project, or simply wish to connect, feel free to reach out. I look forward to hearing from you! For suggestions or feedback, this is the best channel too. 
     </p>
 
     <!-- Google Form Embed -->
